Fixed double border nav-bar in fullscreen and maximized mode

--- a/base.css
+++ b/base.css
@@ -243,14 +243,16 @@ Normal mode
 :root[gtktiledwindow="true"] #nav-bar,
 :root[gtktiledwindow="true"] #nav-bar:-moz-window-inactive{
     border-radius: 6px 6px 0 0 !important;
-    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.3), inset 0 0 0 1px rgba(255,255,255,0.2) !important;
+    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.3) !important;
 }
 :root[sizemode="maximized"] #nav-bar,
 :root[sizemode="maximized"] #nav-bar:-moz-window-inactive,
 :root[sizemode="fullscreen"] #nav-bar {
     border-radius: 0 0 0 0 !important;
+    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.3) !important;
+}
+:root[sizemode="fullscreen"] #nav-bar {
     border-bottom: 1px solid #C9C9C9 !important;
-    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.3), inset 0 0 0 1px rgba(255,255,255,0.2) !important;
 }
 #fullscr-toggler {
     height: 3px !important;
